--- a/Implementations/protein expression RPPA/RPPA_model.ipynb
+++ b/Implementations/protein expression RPPA/RPPA_model.ipynb
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "5b8d859f",
    "metadata": {
     "scrolled": false
@@ -1228,7 +1228,7 @@
        "Length: 170, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "da3c0520",
    "metadata": {
     "scrolled": true
@@ -1263,7 +1263,7 @@
        "Length: 170, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "abab92ff",
    "metadata": {},
    "outputs": [],
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "6f592f99",
    "metadata": {
     "scrolled": true
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "d0655027",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "d374c201",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "1e7fb679",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "7c25dbb3",
    "metadata": {},
    "outputs": [],
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "id": "8eb9c5d4",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "4ac050e3",
    "metadata": {},
    "outputs": [],
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "id": "394df196",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "id": "991d4b4f",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "id": "2068bc59",
    "metadata": {},
    "outputs": [],
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "id": "b5ea4181",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "id": "f3e721ed",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "id": "69c59821",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "id": "268c93c0",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
        "(757, 120)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "id": "43f9a72c",
    "metadata": {},
    "outputs": [],
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 50,
    "id": "5383a84d",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 51,
    "id": "615dbe35",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1686,7 @@
        "(757, 140)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "id": "d4869a22",
    "metadata": {},
    "outputs": [],
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "id": "a4ed3c9e",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 54,
    "id": "3dc84c17",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1757,7 @@
        "(757, 150)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 55,
    "id": "9bceff2d",
    "metadata": {},
    "outputs": [],
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 56,
    "id": "fb2a6147",
    "metadata": {},
    "outputs": [
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 57,
    "id": "109fcf28",
    "metadata": {},
    "outputs": [],
@@ -1835,21 +1835,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "8707d247",
+   "cell_type": "markdown",
+   "id": "66db1d91",
    "metadata": {},
-   "outputs": [],
    "source": [
     "rfc = RandomForestClassifier()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "aa2971c3",
+   "cell_type": "markdown",
+   "id": "5c694b02",
    "metadata": {},
-   "outputs": [],
    "source": [
     "parameters = {\n",
     "    \"n_estimators\":[100,500,1000],\n",
@@ -1860,26 +1856,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "3c569bf0",
+   "cell_type": "markdown",
+   "id": "6d4800ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
-       "             param_grid={'criterion': ['gini', 'entropy'],\n",
-       "                         'max_depth': [4, 8, 16, None],\n",
-       "                         'n_estimators': [100, 500, 1000],\n",
-       "                         'random_state': [0]})"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "cv = GridSearchCV(rfc,parameters,cv=5)\n",
@@ -1887,29 +1866,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "89e0a2c4",
+   "cell_type": "markdown",
+   "id": "74584f4d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best parameters are: {'criterion': 'gini', 'max_depth': 8, 'n_estimators': 1000, 'random_state': 0}\n"
-     ]
-    }
-   ],
    "source": [
     "print(f'Best parameters are: {cv.best_params_}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "275d6acf",
+   "execution_count": 95,
+   "id": "2a946a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 96,
    "id": "6fb9e431",
    "metadata": {},
    "outputs": [
@@ -1945,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 97,
    "id": "a5f47a12",
    "metadata": {
     "scrolled": false
@@ -1966,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 98,
    "id": "eaf22ba7",
    "metadata": {},
    "outputs": [
@@ -1995,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 99,
    "id": "c03bb4fb",
    "metadata": {},
    "outputs": [
@@ -2040,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 100,
    "id": "5a0c57c7",
    "metadata": {},
    "outputs": [
@@ -2059,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 101,
    "id": "3322f163",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 102,
    "id": "c978c6a2",
    "metadata": {},
    "outputs": [
@@ -2097,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 103,
    "id": "59b8e090",
    "metadata": {},
    "outputs": [
@@ -2116,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 104,
    "id": "f3a0be0f",
    "metadata": {},
    "outputs": [
@@ -2135,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 105,
    "id": "9302d98f",
    "metadata": {
     "scrolled": true
@@ -2165,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 106,
    "id": "1115346a",
    "metadata": {},
    "outputs": [
@@ -2175,7 +2144,7 @@
        "(757, 160)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 107,
    "id": "14949bb7",
    "metadata": {},
    "outputs": [],
@@ -2203,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 108,
    "id": "134d6fe6",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 76,
    "id": "62d647ac",
    "metadata": {},
    "outputs": [],
@@ -2251,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 77,
    "id": "fdfd7230",
    "metadata": {
     "scrolled": true
@@ -2263,7 +2232,7 @@
        "Text(0, 0.5, 'Accuracy')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2312,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 78,
    "id": "f45b1644",
    "metadata": {},
    "outputs": [],
@@ -2322,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 79,
    "id": "34584c41",
    "metadata": {
     "scrolled": false
@@ -2343,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 80,
    "id": "c6708724",
    "metadata": {},
    "outputs": [
@@ -2372,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 81,
    "id": "48b8e45a",
    "metadata": {},
    "outputs": [
@@ -2417,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 82,
    "id": "40dba59f",
    "metadata": {},
    "outputs": [],
@@ -2429,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 83,
    "id": "8c873d76",
    "metadata": {},
    "outputs": [
@@ -2454,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 84,
    "id": "8ec2a13b",
    "metadata": {},
    "outputs": [
@@ -2479,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 85,
    "id": "6c68928c",
    "metadata": {},
    "outputs": [
@@ -2512,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 86,
    "id": "8351102d",
    "metadata": {},
    "outputs": [
@@ -2522,7 +2491,7 @@
        "(757, 60)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2538,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 87,
    "id": "00099252",
    "metadata": {},
    "outputs": [],
@@ -2550,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 88,
    "id": "aa00ab8c",
    "metadata": {},
    "outputs": [
@@ -2583,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 89,
    "id": "7da00760",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2562,7 @@
        "(757, 40)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 90,
    "id": "89fee01f",
    "metadata": {},
    "outputs": [],
@@ -2621,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 91,
    "id": "20704f07",
    "metadata": {},
    "outputs": [
@@ -2654,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 92,
    "id": "aaa7841f",
    "metadata": {},
    "outputs": [
@@ -2664,7 +2633,7 @@
        "(757, 30)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 93,
    "id": "68ae5f2f",
    "metadata": {},
    "outputs": [],
@@ -2692,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 94,
    "id": "c2e69415",
    "metadata": {},
    "outputs": [
@@ -2714,6 +2683,49 @@
     "\n",
     "print(\"Accuracy KNN using best 30 features: %0.2f (+/- %0.2f)\" % (acc.mean(), acc.std() * 2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dd1bf6a",
+   "metadata": {},
+   "source": [
+    "Selected Random forest and used parameters are:\n",
+    "- 'criterion': 'Gini', \n",
+    "- 'max_depth': 8, \n",
+    "- 'n_estimators': 1000\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c5f883d",
+   "metadata": {},
+   "source": [
+    "Selected Features are impoerted in a csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "4e634604",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('features.csv', 'w', encoding='UTF8',newline='') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    \n",
+    "    for i in range(sampled_X.shape[1]):\n",
+    "        # write the data\n",
+    "        writer.writerow([sampled_X.columns[i]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41aa7807",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
